<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyPlaylistsActivity">

    <TextView
        android:id="@+id/MyPlaylistsTextview"
        android:layout_width="185dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/my_playlists"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/MyPlaylistsDescriptionTextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:text="@string/description"
        android:textAlignment="center"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/MyPlaylistsTextview"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/MyPlaylistsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/MyPlaylistsDescriptionTextview"
        />

    <Button
        android:id="@+id/NewPlaylistButton"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:text="@string/new_playlist"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MyPlaylistsRecyclerView"
        />

    <Button
        android:id="@+id/DeletePlaylistButton"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:text="@string/delete_playlist"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NewPlaylistButton"
        />
</androidx.constraintlayout.widget.ConstraintLayout>