<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"

    android:id="@+id/fragmentContainerView2"
    android:name="com.example.spawtify.HomeFragment"
    >



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/browseSongsButton"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginTop="64dp"
            android:text="@string/browse_songs"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <Button
            android:id="@+id/myPlaylistsButton"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginTop="64dp"
            android:text="@string/my_playlists"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/browseSongsButton"
            />

        <Button
            android:id="@+id/changePasswordButton"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginTop="64dp"
            android:text="@string/change_password"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myPlaylistsButton"
            />

        <Button
            android:id="@+id/adminButton"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginTop="64dp"
            android:text="@string/secret_admin_stuff"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changePasswordButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>